# inventory_kit

./: Cargo.toml  README.md
examples/: basic.rs
src/: error.rs  in_memory.rs  lib.rs  model.rs  repository.rs  service.rs  utils.rs
tests/: inventory_test.rs
