[package]
name = "inventory_kit"
version = "0.1.1"
edition = "2024"
authors = ["Jerry Maheswara <jerrymaheswara@gmail.com>"]
description = "A powerful Rust toolkit for dynamic inventory management and integration."
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/inventory_kit"
documentation = "https://docs.rs/inventory_kit"
readme = "README.md"
keywords = ["inventory", "integration", "callback"]
categories = ["web-programming"]

[dependencies]
thiserror = "2.0.12"
